fixes home screen size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ h1, h2, h3, h4, h5, h6, a {
   #home {
     background: url(../images/bg1.png);
     display: table;
-    height: 50%;
+    height: 90%;
     position: relative;
     width: 100%;
     margin-top: 76px;
@@ -378,7 +378,7 @@ h1, h2, h3, h4, h5, h6, a {
   #aspirations {
     background: url(../images/bg2.png);
     display: table;
-    height: 100px;
+    height: 500px;
     position: relative;
     width: 100%;
     -webkit-background-size: contain;
@@ -389,14 +389,21 @@ h1, h2, h3, h4, h5, h6, a {
   .home h1 {
     font-size: 2em;
     font-weight: 700;
-    margin-bottom: 10px;
+    margin-bottom: auto;
+    margin-top: auto;
     padding: 0;
   }
   .home h3 {
     font-size: 1.5em;
     font-weight: 700;
-    margin-bottom: 10px;
+    margin-bottom: auto;
+    margin-top: auto;
     padding: 0;
+  }
+
+  .home {
+    position: relative;
+    bottom: 200px;
   }
   .first-aboutp {
     margin-top: 10px;
